# Hack-Project

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Hack_config.hpp.in  LICENSE  README.md  dependencies.cmake  suppression.txt  vcpkg.json
cmake/: BuildInfo.cmake  Cache.cmake  CompilerWarnings.cmake  Coverage.cmake  Doxygen.cmake  IPO.cmake  Linker.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  buildinfo.h.in
src/: CMakeLists.txt
src/GUI_Core/: CMakeLists.txt
src/GUI_Core/include/GUI_Core/: GUI_Core.h  GUI_Frame.h  SDL_InitError.h
src/GUI_Core/src/: GUI_Core.cpp  GUI_Frame.cpp
src/Hack_Assembler/: CMakeLists.txt
src/Hack_Assembler/include/Hack/: Assembler.h  Code_Line.h  Symbol_Table.h
src/Hack_Assembler/src/: Assembler.cpp  Assembler.t.cpp  Code_Generator.cpp  Code_Generator.h  Symbol_Table.cpp
src/Hack_CPU_Emulator/: CMakeLists.txt
src/Hack_CPU_Emulator/src/: ALUDisplay.cpp  ALUDisplay.h  AnimationHandler.cpp  AnimationHandler.h  DataDisplay.hpp  DatumDisplay.cpp  DatumDisplay.h  Definitions.h  DisplayFormats.hpp  Emulator.cpp  Emulator.h  GUI_Core.cpp  GUI_Core.h  GUI_Frame.h  InternalsDisplay.cpp  InternalsDisplay.h  Keyboard_Handler.cpp  Keyboard_Handler.h  SDL_InitError.h  Screen_Texture.cpp  Screen_Texture.h  TextAnimation.cpp  TextAnimation.h  Utilities.cpp  Utilities.h  animation_t.hpp  main.cpp
src/Hack_Computer/: CMakeLists.txt
src/Hack_Computer/include/Hack/: CPU.h  Computer.h  Memory.h
src/Hack_Computer/src/: ALU.h  ALU.t.cpp  CPU.cpp  CPU.t.cpp  Computer.cpp  Computer.t.cpp  Memory.t.cpp
src/Hack_Disassembler/: CMakeLists.txt
src/Hack_Disassembler/include/Hack/: Disassembler.h
src/Hack_Disassembler/src/: Disassembler.cpp  Disassembler.t.cpp
src/Hack_Utilities/: CMakeLists.txt
src/Hack_Utilities/include/Hack/Utilities/: exceptions.hpp  utilities.hpp
src/Hack_Utilities/src/: exceptions.t.cpp  utilities.cpp  utilities.t.cpp
tests/: CMakeLists.txt
tests/Tester/: CMakeLists.txt  main.cpp
